--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div class="rect"></div>
             </div>
             <pre class="ijustcode"><code class="language-javascript">&nbsp;&nbsp;console.log(
-&nbsp;&nbsp;&nbsp;&nbsp;'I Love You'
+&nbsp;&nbsp;&nbsp;&nbsp;'I Love You yaya'
 &nbsp;&nbsp;);</code></pre>
           </div>
         </div>
