--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <div class="rect"></div>
             </div>
             <pre class="ijustcode"><code class="language-javascript">&nbsp;&nbsp;console.log(
-&nbsp;&nbsp;&nbsp;&nbsp;'I Love You'
+&nbsp;&nbsp;&nbsp;&nbsp;'I Love You Lita'
 &nbsp;&nbsp;);</code></pre>
           </div>
         </div>
@@ -31,7 +31,7 @@
               <div class="rect"></div>
             </div>
             <pre class="ijustcode"><code class="language-javascript">&nbsp;&nbsp;console.log(
-&nbsp;&nbsp;&nbsp;&nbsp;'I Love You yaya'
+&nbsp;&nbsp;&nbsp;&nbsp;'I Love You lita'
 &nbsp;&nbsp;);</code></pre>
           </div>
         </div>
@@ -44,7 +44,7 @@
               <div class="rect"></div>
             </div>
             <pre class="ijustcode"><code class="language-javascript">&nbsp;&nbsp;console.log(
-&nbsp;&nbsp;&nbsp;&nbsp;'I Love You'
+&nbsp;&nbsp;&nbsp;&nbsp;'I Love You lita'
 &nbsp;&nbsp;);</code></pre>
             <div class="title">Click me</div>
           </div>
@@ -56,7 +56,7 @@
               <div class="rect"></div>
             </div>
             <pre class="ijustcode"><code class="language-javascript">&nbsp;&nbsp;console.log(
-&nbsp;&nbsp;&nbsp;&nbsp;'I Love You '
+&nbsp;&nbsp;&nbsp;&nbsp;'I Love You lita'
 &nbsp;&nbsp;);</code></pre>
             <div class="title">Click me</div>
           </div>
